Don't crash if we get constraintsEvent before init.

BUG: 168668


svn path=/trunk/KDE/kdebase/workspace/; revision=845389